# win-color

./: Cargo.toml  README.md
examples/: gradient.rs  solid.rs
src/: constant.rs  error.rs  gradient.rs  lib.rs  parser.rs  solid.rs  utils.rs
src/parser/: mod.rs  named_colors.rs
