[package]
name = "win-color"
version = "0.1.7"
edition = "2021"
description = "A Rust library for managing and manipulating colors in Windows applications, providing high-level abstractions for color handling, gradient creation, and direct integration with Direct2D."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/0xJWLabs/win-color"
repository = "https://github.com/0xJWLabs/win-color"
documentation = "https://docs.rs/win-color"
categories = ["os::windows-apis", "api-bindings"]
keywords = ["colors", "windows", "system-wide", "global", "win32"]
authors = ["0xJWLabs <0xJWLabs@gmail.com>"]

[dependencies]
colorparser-css = { version = "0.0.7", features = ["hash-colors", "serde"] }
serde = { version = "1.0.217", features = ["derive"] }

[dependencies.windows]
version = "0.59.0"
features = [
  "Win32_Foundation",
  "Foundation_Numerics",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
]
